<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        />

    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_shopping_cart_24"
        android:title="@string/item_list"
        />

    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_shopping_basket_24"
        android:title="@string/basket"
        />

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_grade_24"
        android:title="@string/event"
        />

    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/myinfo"
        />
</menu>